<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_insert"
            android:icon="@drawable/ic_menu_insert"
            android:title="@string/menu_insert" />
        <item
            android:id="@+id/nav_listado"
            android:icon="@drawable/ic_menu_listado"
            android:title="@string/menu_listado" />
        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/ic_menu_carrito"
            android:title="@string/menu_carrito" />
        <item
            android:id="@+id/nav_pedido"
            android:icon="@drawable/ic_menu_pedido"
            android:title="@string/menu_pedido" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
